# decision-tracker

./: .gitignore  ARCHITECTURE.md  README.md  RUNBOOK.md  pyproject.toml
.github/workflows/: pages.yml
decisions/: DR-0002-adopt-transformer-baseline.md  DR-0004-pin-dataset-version.md  DR-0006-adjust-metric-threshold.md  DR-0007-add-training-config-to-model-spec.md  DR-0008-add-git-aware-cli-behavior.md  DR-0009-clarify-rounding-and-root-resolution.md  DR-0011-add-static-viewer-publishing.md
docs/: dataset-versioning-notes.md  decision-tracking-rationale.md  model-selection-notes.md  template-guidance.md
evaluation/: instructions_baseline.md  instructions_treatment.md  scoring_sheet.csv  tasks.md
fixtures/decisions/: DR-0001-introduce-decision-tracking.md  DR-0003-eval-protocol-stratified-split.md  DR-0005-supersede-pin-dataset-rule.md
fixtures/expected/: artifacts.json  graph.json  index.json  metrics.csv  report.md
schemas/: artifacts.schema.json  graph.schema.json  index.schema.json
scripts/: build_site.py  init_repo.sh
src/dt/: cli.py  commands.py  constants.py  git.py  paths.py  reporting.py  scaffold.py  site.py  utils.py  validation.py
src/dt/assets/viewer/: app.js  index.html  styles.css
src/dt/assets/workflows/: pages.yml
tests/: conftest.py  test_backfill_discover.py  test_build_site.py  test_init_command.py  test_new_command.py  test_report_golden.py  test_validate_negative.py
viewer/: README.md  app.js  index.html  styles.css
