[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dt"
version = "0.1.0"
description = "Decision Tracker CLI"
requires-python = ">=3.10"
dependencies = ["typer>=0.12", "PyYAML>=6.0"]

[project.scripts]
dt = "dt.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
